--- a/sounds/app/build.gradle
+++ b/sounds/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'com.google.gms.google-services'
 
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -32,7 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-
+    implementation group: 'com.thomsonreuters', name: 'rippledecoratorview', version: '1.0.0'
     implementation project(':launcher-debug')
     implementation project(':unityLibrary')
     implementation 'com.google.android.material:material:1.0.0'
