--- a/sounds/app/build.gradle
+++ b/sounds/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     def nav_version = "2.3.1"
 
     /*Glide Library
